First step towars GeneralInfo components integration

--- a/app/views/branded/plans/_edit_details.html.erb
+++ b/app/views/branded/plans/_edit_details.html.erb
@@ -2,229 +2,15 @@
 <% dmp_fragment = @plan.json_fragment() %>
 <% meta_fragment = dmp_fragment.meta %>
 <% project_fragment = dmp_fragment.project %>
-<% project_schema = project_fragment.madmp_schema %>
-<% meta_schema = meta_fragment.madmp_schema %>
 
-<% anr_projects = Registry.find_by(name: "ANRProjects").registry_values %>
+<%# anr_projects = Registry.find_by(name: "ANRProjects").registry_values %>
 <% locale = LocaleService.to_gettext(locale: @plan.template.locale)%>
-<div class="row">
-  <div class="col-md-12 plan-details">
-    <div class="col-md-8">
- 
-      <% if project_schema.run_parameters? && @plan.template.research_project? %>
-        <div class="anr-import">
-          <div class="heading-button" role="button" data-toggle="collapse"
-                href="#anr_import"
-                aria-expanded="false"
-                aria-controls="anr_import">
-            <div class="panel-heading anr-import-heading" role="tab" id="heading-anr-import">
-              <div class="panel-title pull-left">
-                <% I18n.with_locale @plan.template.locale do %>
-                  <%= _("Click here if you have a project funded by ANR.") %>
-                <% end %>
-              </div>
-              <i class="fas fa-chevron-up pull-right" aria-hidden="true"></i>
-              <div class="clearfix"></div>
-            </div>
-          </div>
-          <div id="anr_import" class="panel-collapse collapse anr-import-content" role="tabpanel" aria-labelledby="heading-anr-import">
-            <div class="panel-body anr-import"><!-- accordion body -->
-              <% select_values = Registry.find_by(name: "ANRProjects").registry_values %>
-              <% run_parameters = project_schema.extract_run_parameters[0] %>
-              <% tooltip = run_parameters["tooltip@#{locale}"]%>
-              <% I18n.with_locale @plan.template.locale  do %>
-                <div class="col-md-12 dynamic-field select-field single-select project-selector"
-                    data-fragment-id="<%= project_fragment.id%>"
-                    data-script-id="<%= run_parameters["script_id"]%>">
-                  <label class="control-label">
-                    <%= _("Please enter the acronym, title or identifier of the project") %>
-                    <a href="<%= about_registries_path %>" target="_blank"
-                      data-toggle="tooltip" data-original-title="<%= _("Find out more.") %>">
-                      <span class="registry-info fas fa-info-circle"></span>
-                    </a>
-                  </label>
-                  <%= select_tag "anr_project",
-                              options_for_select(
-                                  select_values.sort_by { |v| v.to_s(locale: locale)}
-                                              .map {|v| [ 
-                                          v.to_s(locale: locale), 
-                                          select_value(v, locale) 
-                                      ] 
-                                  }
-                              ),
-                            include_blank: true
-                            %>
-                  <span class="error-zone"></span>
-                  <!--span class="btn btn-default cancel-project-search"><%= _("Cancel") %></span-->
-                </div>
-              <% end %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-        
-      <div class="project-meta">
-        <div class="heading-button" role="button" data-toggle="collapse"
-              href="#plan_project"
-              aria-expanded="true"
-              aria-controls="plan_project">
-          <div class="panel-heading question-text dmpopidor-accordion" role="tab" id="heading-plan-project">
-            <div class="panel-title pull-left">
-              <% I18n.with_locale @plan.template.locale do %>
-                <%= @plan.template.research_project? ? _("Project Details") : _("Structure Details") %>
-              <% end %>
-            </div>
-            <i class="fas fa-chevron-down pull-right" aria-hidden="true"></i>
-            <div class="clearfix"></div>
-          </div>
-        </div>
 
-        <div id="plan_project" class="panel-collapse collapse in plan-details-content" role="tabpanel" aria-labelledby="heading-plan-project">
-          <%= hidden_field_tag 'fragment-id', project_fragment.id, class: "fragment-id" %>
-          <div class="panel-body project-form madmp-fragment"><!-- accordion body -->
-            <% I18n.with_locale @plan.template.locale  do %>
-              <div class="checkbox">
-                <%= form_for plan, url: set_test_plan_path(plan), html: { method: :post, class: 'set_test_plan', remote: true } do |f| %>
-                  <%= f.label(:is_test, class: 'control-label') do %>
-                    <%= check_box_tag :is_test, "1", (plan.visibility === "is_test"),
-                                        title: _("Is it a test plan ?"),
-                                        class: "set_test_plan",
-                                        data: { remote: true, method: :post,
-                                                url: set_test_plan_path(plan) } %>
-                    <%= _('mock project for testing, practice, or educational purposes') %>
-                  <% end %>
-                <% end %>
-              </div>
-              <%= form_for :madmp_fragment, url: madmp_fragment_path(id: project_fragment.id), 
-                          html: {
-                            method: :put,
-                            'data-autosave': project_fragment.id,
-                            class: "form-answer madmp-fragment", 
-                            id: nil  
-                          } do |f| %>
-              <fieldset aria-labelledby="fragment-fieldset" class="fragment-fieldset">
-                <%= f.hidden_field :schema_id, :value => project_schema.id, id: nil, class: "schema_id" %>
-                <%= f.hidden_field :dmp_id, :value => dmp_fragment.id, id: nil %>
-                <%= f.hidden_field :parent_id, :value => dmp_fragment.id, id: nil %>
-                <%= f.hidden_field :template_locale, :value => locale, id: nil %>
-                <%= f.hidden_field "source", :value => "form" %>
-                <div class="form-group fragment-<%= project_fragment.id %>" data-fragment-id="<%= project_fragment.id %>" >
-                  <%= render(partial: 'dynamic_form/form', locals: { 
-                        f: f,
-                        current_fragment: project_fragment, 
-                        schema: project_schema,
-                        question_id: nil,
-                        readonly: false,
-                        classname: "project",
-                        template_locale: locale,
-                        form_prefix: nil,
-                        source: "form"
-                      }) %>
-                </div>
-                <div class="overlay" style="display:none;">
-                  <div class="spinner"></div>
-                  <br/>
-                  <%= _('Loading...') %>
-                </div>
-                <div class="answer-bottom-zone" >
-                  <div class="schema-picker-zone run-zone">
-                    <span class="message-zone"><%= _('You have pending changes, please save')%></span>
-                  </div>
-                  <div class="answer-save-zone">
-                    <%= f.button(_('Save'), class: "btn btn-default answer-save-button", type: "submit") %>
-                  </div>
-                </div>
-              </fieldset>
-
-              <% end %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-
-      <div class="project-meta">
-        <div class="heading-button" role="button" data-toggle="collapse"
-              href="#plan_metadata"
-              aria-expanded="false"
-              aria-controls="plan_metadata">
-
-          <div class="panel-heading question-text dmpopidor-accordion" role="tab" id="heading-plan-metadata">
-            <div class="panel-title pull-left">
-              <% I18n.with_locale @plan.template.locale  do %>
-                <%= _("Plan Details") %>
-              <% end %>
-            </div>
-            <i class="fas fa-chevron-down pull-right" aria-hidden="true"></i>
-            <div class="clearfix"></div>
-          </div>
-        </div>
-
-        <div id="plan_metadata" class="panel-collapse collapse in plan-details-content" role="tabpanel" aria-labelledby="heading-plan-metadata">
-          <%= hidden_field_tag 'fragment-id', meta_fragment.id, class: "fragment-id" %>
-          <div class="panel-body madmp-fragment"><!-- accordion body -->
-            <% I18n.with_locale @plan.template.locale  do %>
-              <%= form_for :madmp_fragment, url: madmp_fragment_path(id: meta_fragment.id), 
-                            html: {
-                              method: :put,
-                              'data-autosave': meta_fragment.id,
-                              class: "form-answer madmp-fragment", 
-                              id: nil  
-                            } do |f| %>
-                <fieldset aria-labelledby="fragment-fieldset" class="fragment-fieldset">
-                  <%= f.hidden_field :schema_id, :value => meta_schema.id, id: nil, class: "schema_id" %>
-                  <%= f.hidden_field :dmp_id, :value => dmp_fragment.id, id: nil %>
-                  <%= f.hidden_field :parent_id, :value => dmp_fragment.id, id: nil %>
-                  <%= f.hidden_field :template_locale, :value => locale, id: nil %>
-                  <%= f.hidden_field "source", :value => "form" %>
-                  <div class="meta-form form-group fragment-<%= meta_fragment.id %>" data-fragment-id="<%= meta_fragment.id %>" >
-                    <%= render(partial: 'dynamic_form/form', locals: { 
-                          f: f,
-                          current_fragment: meta_fragment, 
-                          schema: meta_schema,
-                          question_id: nil,
-                          readonly: false,
-                          classname: "meta",
-                          template_locale: locale,
-                          form_prefix: nil,
-                          source: "form"
-                        }) %>
-                  </div>
-                  <div class="overlay" style="display:none;">
-                    <div class="spinner"></div>
-                    <br/>
-                    <%= _('Loading...') %>
-                  </div>
-                  <div class="answer-bottom-zone" >
-                    <div class="schema-picker-zone run-zone">
-                      <span class="message-zone"><%= _('You have pending changes, please save')%></span>
-                    </div>
-                    <div class="answer-save-zone">
-                      <%= f.button(_('Save'), class: "btn btn-default answer-save-button", type: "submit") %>
-                    </div>
-                  </div>
-                </fieldset>
-              <% end %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <%= form_for plan, html: {method: :put, class: 'form-horizontal edit_plan' } do |f| %>
-      <div class="col-md-4 guidance-configuration">
-        <!-- "Guidance Configuration" tab -->
-        <div id="guidance_configuration" class="tab-pane">
-          <h2><%= _('Plan Guidance Configuration') %></h2>
-          <%= render partial: "plans/guidance_selection",
-                    locals: {
-                      form: f,
-                      all_guidance_groups: @all_guidance_groups,
-                      important_ggs: @important_ggs,
-                      selected_guidance_groups: @selected_guidance_groups
-                    } %>
-        </div>
-      </div>
-    <% end %>
-  </div>
-</div>
-<div class="modal fade" id="modal-window" tabindex="-1" role="dialog" aria-labelledby="linkedInformationsModal" aria-hidden="true"></div>
+<dmp-general-info props-json='{
+  "locale": "<%= I18n.locale.to_s %>",
+  "planId": <%= @plan.id %>,
+  "dmpId": <%= dmp_fragment.id %>,
+  "projectFragmentId": <%= project_fragment.id %>,
+  "metaFragmentId": <%= meta_fragment.id %>,
+  "isTestPlan": <%= @plan.is_test? %>
+}'/>
