Issue #3144 - Style changes. - Changed font-size for site to 0.9rem from 0.95rem. -Updated styling of label font-weights to emulate how it was on version Bootsrap 3. Label font-weight set to 700, but radio and checkbox labels set to 400.

--- a/app/assets/stylesheets/blocks/_labels.scss
+++ b/app/assets/stylesheets/blocks/_labels.scss
@@ -1,5 +1,9 @@
 @use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
 /* label stlying */
+label {
+  font-weight: 700;
+}
+
 .label {
   font-size: 85%;
   border-radius: 0px;
@@ -8,6 +12,10 @@
 /* RADIO BUTTONS */
 .radio label {
   margin-right: calc($grid-gutter-width / 2);
+}
+
+.radio label, .checkbox label {
+  font-weight: 400;
 }
 
 /* Remove mandatory * from check_box_tag in Admin search */
