Issue #3144 - As .panel class was dropped in favour of cards.
All views with classes .panel, .panel-body, panel-*. Have panel replaced
by card to give .card, .card_bobyt, .card-*, etc.
Further work needed to get this right. As panel-default and some other
panel classes don't have card equivalents with same suffixes. So we have
added these classes temporarily in _cards.sccs. For example.
.card-fefault. etc.

--- a/app/assets/stylesheets/blocks/_index.scss
+++ b/app/assets/stylesheets/blocks/_index.scss
@@ -23,7 +23,7 @@
 @use 'new_plans_form';
 @use 'new_window_popup';
 @use 'notification_areas';
-@use 'panels';
+@use 'cards';
 @use 'profile_form';
 @use 'progress';
 @use 'project_details';
