--- a/app/views/org_admin/phases/preview.html.erb
+++ b/app/views/org_admin/phases/preview.html.erb
@@ -42,8 +42,8 @@
     <!-- render phase below -->
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active">
-        <div class="panel panel-default">
-          <div class="panel-body">
+        <div class="card card-default">
+          <div class="card-body">
             <%= render partial: '/phases/edit_plan_answers',
                   locals: {
                     plan: nil,
