--- a/app/views/org_admin/templates/index.html.erb
+++ b/app/views/org_admin/templates/index.html.erb
@@ -68,8 +68,8 @@
 
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active">
-        <div class="panel panel-default">
-          <div class="panel-body template-scope">
+        <div class="card card-default">
+          <div class="card-body template-scope">
             <h2><%= @title %></h2>
             <div class="template-table-filters">
               <% filter_path = "/paginable/templates/#{action_name}/#{1}" %>
