--- a/app/views/super_admin/orgs/new.html.erb
+++ b/app/views/super_admin/orgs/new.html.erb
@@ -20,8 +20,8 @@
     <!-- render navigation tabs for the template-->
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active" id="profile">
-        <div class="panel panel-default">
-          <div class="panel-body">
+        <div class="card card-default">
+          <div class="card-body">
             <div class="px-2">
               <%= render partial: 'orgs/profile_form',
                          locals: {
