--- a/app/assets/stylesheets/blocks/_cards.scss
+++ b/app/assets/stylesheets/blocks/_cards.scss
@@ -1,11 +1,11 @@
 @use '../variables/colours' as *;
 @use "../../../../node_modules/bootstrap/scss/bootstrap" as *;
-// Override Bootstrap 3.0's Panels
+// Override Bootstrap 5 cards
 
-.panel {
+.card {
   border-color: $color-border-default;
 }
-.heading-button > .panel-heading, .panel > .panel-heading {
+.heading-button > .card-heading, .card > .card-heading {
   background-color: $color-primary-background;
   color: $color-primary-text;
   border-top-right-radius: 0px;
@@ -17,14 +17,35 @@
   cursor: 'auto' !important;
 }
 
-.panel-title a {
+.card-title a {
   display: block;
   padding: 8px calc($grid-gutter-width / 2);
   margin: -10px calc($grid-gutter-width / -2);
   background-color: $color-primary-background;
   color: $color-primary-text;
 }
-.panel-title > a.reverse {
+.card-title > a.reverse {
   background-color: $color-secondary-background;
   color: $color-secondary-text;
 }
+
+// Classes from Boostrap 3 panels (renamed card) - interim solution
+.card-default {
+  border-color: #ddd;
+}
+.card-default > .card-heading {
+  color: #333333;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+}
+.card-default > .card-heading + .card-collapse > .card-body {
+  border-top-color: #ddd;
+}
+.card-default > .card-heading .badge {
+  color: #f5f5f5;
+  background-color: #333333;
+}
+.card-default > .card-footer + .card-collapse > .card-body {
+  border-bottom-color: #ddd;
+}
+
