--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,31 +30,31 @@
 
       <div class="tab-content">
         <div id="personal-details" role="tabpanel" class="tab-pane active">
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="card card-default">
+            <div class="card-body">
               <%= render partial: 'devise/registrations/personal_details', locals: {orgs: @orgs, org_partial: @org_partial} %>
             </div>
           </div>
         </div>
         <div id="password-details" role="tabpanel" class="tab-pane">
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="card card-default">
+            <div class="card-body">
               <%= render partial: 'devise/registrations/password_details' %>
             </div>
           </div>
         </div>
         <% if @user.can_use_api? %>
           <div id="api-details" role="tabpanel" class="tab-pane">
-            <div class="panel panel-default">
-              <div class="panel-body">
+            <div class="card card-default">
+              <div class="card-body">
                 <%= render partial: 'devise/registrations/api_token', locals: { user: @user } %>
               </div>
             </div>
           </div>
         <% end %>
         <div id="notification-preferences" role="tabpanel" class="tab-pane">
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="card card-default">
+            <div class="card-body">
               <%= render partial: 'users/notification_preferences' %>
             </div>
           </div>
