--- a/app/views/guidance_groups/_index_by_theme.html.erb
+++ b/app/views/guidance_groups/_index_by_theme.html.erb
@@ -1,6 +1,6 @@
 <%# locals{ guidance_groups_by_theme } %>
 <% parent_id = guidance_groups_by_theme.object_id %>
-<div id="<%= parent_id %>" class="panel-group" role="tablist" aria-multiselectable="true">
+<div id="<%= parent_id %>" class="card-group" role="tablist" aria-multiselectable="true">
   <% guidance_groups_by_theme.each_pair do |guidance_group, theme_hash| %>
     <% guidances_output = [] %>
     <%# Do not show expand/collapse all links if there is only one item in theme_hash %>
@@ -17,7 +17,7 @@
       <% question_guidance_id = "#{question.object_id}-#{guidances.object_id}" %>
       <%# if guidances with this theme have not been output %>
       <% if (guidances.map(&:id) - guidances_output).any? %>
-        <div class="panel panel-default">
+        <div class="card card-default">
           <div
             class="heading-button"
             role="button"
@@ -25,8 +25,8 @@
             href="<%= "##{question_guidance_id}" %>"
             aria-expanded="false"
             aria-controls="<%= "##{question_guidance_id}" %>">
-            <div class="panel-heading" role="tab" id="<%= "panel-heading-#{question_guidance_id}" %>">
-              <h2 class="panel-title">
+            <div class="card-heading" role="tab" id="<%= "card-heading-#{question_guidance_id}" %>">
+              <h2 class="card-title">
                 <%= theme.title %>
                 <i class="fas fa-plus pull-right" aria-hidden="true"></i>
               </h2>
@@ -34,10 +34,10 @@
           </div>
           <div
             id="<%= "#{question_guidance_id}" %>"
-            class="panel-collapse collapse"
+            class="card-collapse collapse"
             role="tabpanel"
-            aria-labelledby="<%= "panel-heading-#{question_guidance_id}" %>">
-            <div class="panel-body">
+            aria-labelledby="<%= "card-heading-#{question_guidance_id}" %>">
+            <div class="card-body">
               <% multiple = false %>
               <% guidances.each do |guidance| %>
                 <% if multiple %>
