--- a/app/views/guidance_groups/_show.html.erb
+++ b/app/views/guidance_groups/_show.html.erb
@@ -1,5 +1,5 @@
 <%# locals: { group, question, guidance_accordion_id }%>
-<div id="guidance-<%= guidance_accordion_id %>-accordion" class="panel-group" role="tablist" aria-multiselectable="true">
+<div id="guidance-<%= guidance_accordion_id %>-accordion" class="card-group" role="tablist" aria-multiselectable="true">
   <% if group.keys.length > 1 %>
     <div id="guidance-accordion-controls">
       <div class="accordion-controls" data-parent="guidance-<%= guidance_accordion_id %>-accordion">
@@ -10,23 +10,23 @@
     </div>
   <% end %>
   <% group.keys.each_with_index do |theme, i| %>
-    <div class="panel panel-default">
+    <div class="card card-default">
       <div class="heading-button" role="button" data-toggle="collapse"
            data-parent="<%= question.id %>-guidance"
            href="#collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>"
            aria-expanded="false"
            aria-controls="#collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>">
 
-        <div class="panel-heading" role="tab" id="heading-<%= i %>">
-          <h2 class="panel-title">
+        <div class="card-heading" role="tab" id="heading-<%= i %>">
+          <h2 class="card-title">
             <%= theme %>
             <i class="fas fa-plus pull-right" aria-hidden="true"></i>
           </h2>
         </div>
       </div>
-      <div id="collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>" class="panel-collapse collapse" role="tabpanel"
+      <div id="collapse-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>" class="card-collapse collapse" role="tabpanel"
          aria-labelledby="heading-guidance-<%= question.id %>-<%= guidance_accordion_id %>-<%= i %>">
-        <div class="panel-body">
+        <div class="card-body">
           <% group[theme].each do |guidance| %>
             <%= sanitize guidance %>
           <% end %>
