--- a/app/views/notes/_layout.html.erb
+++ b/app/views/notes/_layout.html.erb
@@ -1,7 +1,7 @@
 <%# locals: { plan, question, answer } %>
 <% notes = answer.non_archived_notes %>
-<div class="panel panel-default">
-  <div class="panel-body">
+<div class="card card-default">
+  <div class="card-body">
     <div class="row">
       <div class="col-md-12">
         <%= render partial: "/notes/list", locals: { question_id: question.id, notes: notes, plan: plan }, formats: [:html] %>
