--- a/app/views/org_admin/phases/_index.html.erb
+++ b/app/views/org_admin/phases/_index.html.erb
@@ -13,21 +13,21 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <div class="panel-group" id="phases_accordion" role="tablist">
+    <div class="card-group" id="phases_accordion" role="tablist">
       <!-- If template has phases-->
       <% if template_hash[:template][:phases].present? %>
         <% i = 0 %>
         <% template_hash[:template][:phases].each do |phase_no, phase_hash| %>
           <% phase = phase_hash[:data] %>
-            <div class="panel panel-default">
+            <div class="card card-default">
               <div class="heading-button" role="button" data-toggle="collapse"
                    data-parent="phases_accordion"
                    href="#collapsePhase<%= phase.id %>"
                    aria-expanded="<%= i == 0 ? 'true' : 'false' %>"
                    aria-controls="#collapsePhase<%= phase.id %>">
 
-                <div class="panel-heading" role="tab" id="<%= "headingPhase#{phase.id}" %>">
-                  <div class="panel-title pull-left">
+                <div class="card-heading" role="tab" id="<%= "headingPhase#{phase.id}" %>">
+                  <div class="card-title pull-left">
                     <%= phase.title %>
                   </div>
                   <div class="pull-right">
@@ -36,8 +36,8 @@
                   <div class="clearfix"></div>
                 </div>
               </div>
-              <div id="<%= "collapsePhase#{phase.id}" %>" class="panel-collapse collapse<%= i == 0 ? 'in' : '' %>" role="tabpanel" aria-labelledby="<%= "headingPhase#{phase.id}" %>"<%= i == 0 ? 'aria-expanded="true"' : '' %>>
-                <div class="panel-body">
+              <div id="<%= "collapsePhase#{phase.id}" %>" class="card-collapse collapse<%= i == 0 ? 'in' : '' %>" role="tabcard" aria-labelledby="<%= "headingPhase#{phase.id}" %>"<%= i == 0 ? 'aria-expanded="true"' : '' %>>
+                <div class="card-body">
                   <%= render partial: 'org_admin/templates/show_phases_sections', locals: { phase: phase, phase_hash: phase_hash, template: template, current: current } %>
                 </div>
               </div>
