--- a/app/views/org_admin/sections/_section.html.erb
+++ b/app/views/org_admin/sections/_section.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default section" data-section-id="<%= section.id %>">
+<div class="card card-default section" data-section-id="<%= section.id %>">
 
   <a
     href="<%= header_path_for_section(section, phase, template) %>"
@@ -10,8 +10,8 @@
     aria-expanded="false"
     aria-controls="#collapseSection<%= section.id %>">
 
-    <div class="panel-heading" role="tab" id="<%= "headingSection#{section.id}" %>">
-      <div class="panel-title pull-left">
+    <div class="card-heading" role="tab" id="<%= "headingSection#{section.id}" %>">
+      <div class="card-title pull-left">
         <%= section.title %>
       </div>
       <div class="pull-right">
@@ -30,10 +30,10 @@
 
   <div
   id="<%= "collapseSection#{section.id}" %>"
-  class="panel-collapse collapse<%= " in" if current_section.present? && section.id == current_section.id %>"
+  class="card-collapse collapse<%= " in" if current_section.present? && section.id == current_section.id %>"
   role="tabpanel"
   aria-labelledby="<%= "headingSection#{section.id}" %>">
-    <div class="panel-body" data-loaded="<%= current_section.present? && section.id == current_section.id %>">
+    <div class="card-body" data-loaded="<%= current_section.present? && section.id == current_section.id %>">
       <%# This is AJAX loaded on demand unless section_id is specified in the URL %>
       <% if current_section.present? && section.id == current_section.id %>
         <% partial = "org_admin/sections/#{section.modifiable? ? 'edit' : 'show'}" %>
