--- a/app/views/org_admin/templates/new.html.erb
+++ b/app/views/org_admin/templates/new.html.erb
@@ -15,8 +15,8 @@
 
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active">
-        <div class="panel panel-default">
-          <div class="panel-body">
+        <div class="card card-default">
+          <div class="card-body">
             <div class="template_edit">
               <%= form_for([:org_admin, @template]) do |f| %>
                 <%= render 'form', { f: f }%>
