--- a/app/views/orgs/admin_edit.html.erb
+++ b/app/views/orgs/admin_edit.html.erb
@@ -36,8 +36,8 @@
     <!-- render navigation tabs for the template-->
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active" id="profile">
-        <div class="panel panel-default">
-          <div class="panel-body">
+        <div class="card card-default">
+          <div class="card-body">
             <div class="px-2">
               <%= render partial: 'orgs/profile_form',
                          locals: { org: org, method: method, url: url } %>
@@ -47,8 +47,8 @@
       </div>
 
       <div role="tabpanel" class="tab-pane" id="feedback">
-        <div class="panel panel-default">
-          <div class="panel-body">
+        <div class="card card-default">
+          <div class="card-body">
             <div>
               <%= render partial: 'orgs/feedback_form',
                          locals: { org: org } %>
@@ -58,8 +58,8 @@
       </div>
 
       <div role="tabpanel" class="tab-pane" id="departments">
-        <div class="panel panel-default">
-          <div class="panel-body">
+        <div class="card card-default">
+          <div class="card-body">
             <div>
               <%= render partial: 'orgs/departments',
                          locals: { org: org } %>
@@ -70,8 +70,8 @@
 
       <% if current_user.can_super_admin? %>
         <div role="tabpanel" class="tab-pane" id="merge">
-          <div class="panel panel-default">
-            <div class="panel-body">
+          <div class="card card-default">
+            <div class="card-body">
               <div>
                 <%= render partial: 'orgs/merge_form', locals: { org: org, analysis: nil } %>
               </div>
