--- a/app/views/phases/_edit_plan_answers.html.erb
+++ b/app/views/phases/_edit_plan_answers.html.erb
@@ -25,10 +25,10 @@
         </div>
       </div>
     </div>
-    <div class="panel-group" id="sections-accordion" role="tablist"
+    <div class="card-group" id="sections-accordion" role="tablist"
          aria-multiselectable="true">
     <% phase.sections.sort {|a,b| a.number <=> b.number }.each do |section| %>
-      <div class="panel panel-default">
+      <div class="card card-default">
         <div class="heading-button" role="button" data-toggle="collapse"
              id="section-panel-<%= section.id %>"
              data-parent="sections-accordion"
@@ -36,8 +36,8 @@
              aria-expanded="false"
              aria-controls="collapse-<%= section.id %>">
 
-          <div class="panel-heading" role="tab" id="heading-<%= section.id %>">
-            <div class="panel-title pull-left">
+          <div class="card-heading" role="tab" id="heading-<%= section.id %>">
+            <div class="card-title pull-left">
               <%= section.title %>
               <% if plan.present? %>
                   <span class="section-progress-<%= section.id %>">
@@ -50,8 +50,8 @@
             <div class="clearfix"></div>
           </div>
         </div>
-        <div id="collapse-<%= section.id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-<%= section.id %>">
-          <div class="panel-body"><!-- accordion body -->
+        <div id="collapse-<%= section.id %>" class="card-collapse collapse" role="tabpanel" aria-labelledby="heading-<%= section.id %>">
+          <div class="card-body"><!-- accordion body -->
             <div class="section-description">
               <div class="display-readonly-textarea-content">
                 <%= sanitize section.description %>
@@ -114,10 +114,10 @@
                   <hr />
                 <% end %>
               <% end %> <!-- section.questions.each do -->
-            </div> <!-- panel-body -->
-          </div> <!-- panel-collapse -->
-        </div> <!-- panel panel-default -->
+            </div> <!-- card-body -->
+          </div> <!-- card-collapse -->
+        </div> <!-- card card-default -->
       <% end %>   <!-- phase.sections.sort {|a,b| a.number <=> b.number }.each do -->
-    </div>   <!-- panel-group -->
-  </div> <!-- tab panel -->
+    </div>   <!-- card-group -->
+  </div> <!-- tab card -->
 </div> <!-- tab panels -->
