--- a/app/views/plans/_navigation.html.erb
+++ b/app/views/plans/_navigation.html.erb
@@ -46,8 +46,8 @@
 </ul>
 <div class="tab-content">
   <div id="content" role="tabpanel" class="tab-pane active">
-    <div class="panel panel-default">
-      <div class="panel-body">
+    <div class="card card-default">
+      <div class="card-body">
         <%= yield :plan_tab_body %>
       </div>
     </div>
