--- a/app/views/plans/_overview_details.html.erb
+++ b/app/views/plans/_overview_details.html.erb
@@ -26,18 +26,18 @@
     <% if plan.template.phases.size == 1 %>
       <%= render(partial: '/phases/overview', locals: { plan_id: plan.id, phase: plan.template.phases.first }) %>
     <% else %>
-      <div class="panel-group" id="plan-overview-accordion" role="tablist" aria-multiselectable="true">
+      <div class="card-group" id="plan-overview-accordion" role="tablist" aria-multiselectable="true">
         <% plan.template.phases.each do |p| %>
           <% questions_size = p.sections.map{|s| s.questions.size }.reduce(0){|sum,x| sum + x } %>
-          <div class="panel panel-default">
+          <div class="card card-default">
             <div class="heading-button" role="button" data-toggle="collapse"
                  data-parent="plan-overview-accordion"
                  href="#plan-overview-collapse-<%= p.id %>"
                  aria-expanded="false"
                  aria-controls="#plan-overview-collapse-<%= p.id %>">
 
-              <div class="panel-heading" role="tab" id="plan-overview-heading-<%= p.id %>">
-                <div class="panel-title">
+              <div class="card-heading" role="tab" id="plan-overview-heading-<%= p.id %>">
+                <div class="card-title">
                   <div class="pull-left">
                     <%= _("%{phase_title} (%{sections_size} %{sections}, %{questions_size} %{questions})") % {
                       :phase_title => p.title, :sections_size => p.sections.size, :sections => n_('section', 'sections', p.sections.size),
@@ -51,8 +51,8 @@
                 </div>
               </div>
             </div>
-            <div id="plan-overview-collapse-<%= p.id %>" class="panel-collapse collapse" role="tabpanel" aria-labelledby="plan-overview-heading-<%= p.id %>">
-              <div class="panel-body">
+            <div id="plan-overview-collapse-<%= p.id %>" class="card-collapse collapse" role="tabpanel" aria-labelledby="plan-overview-heading-<%= p.id %>">
+              <div class="card-body">
                 <%= render(partial: '/phases/overview', locals: { plan_id: plan.id, phase: p }) %>
               </div>
             </div>
