Issue #3144 - Playing with breakpoints for a project details page. Replaved breakpoint md with lg.

--- a/app/views/plans/_project_details.html.erb
+++ b/app/views/plans/_project_details.html.erb
@@ -10,16 +10,16 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 %>
 
 <div class="form-group"><!-- title -->
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <%= form.label(:title, _('Project title'), class: 'control-label') %>
   </div>
-  <div class="col-md-8">
+  <div class="col-lg-8">
     <em class="sr-only"><%= project_title_tooltip %></em>
     <%= form.text_field(:title, class: "form-control", "aria-required": true,
                                 'data-toggle': 'tooltip', spellcheck: true,
                                 title: project_title_tooltip) %>
   </div>
-  <div class="col-md-8">
+  <div class="col-lg-8">
     <div class="checkbox">
       <%= form.hidden_field :visibility %>
       <%= form.label(:is_test, class: 'control-label') do %>
@@ -31,10 +31,10 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 </div>
 
 <div class="form-group"><!-- description -->
-  <div class="col-md-12">
+  <div class="col-lg-12">
     <%= form.label(:description, _('Project abstract'), class: 'control-label', id: 'project-description-label') %>
   </div>
-  <div class="col-md-8" data-toggle="tooltip" title="<%= project_abstract_tooltip %>">
+  <div class="col-lg-8" data-toggle="tooltip" title="<%= project_abstract_tooltip %>">
     <em class="sr-only"><%= project_abstract_tooltip %></em>
     <%= form.text_area :description, rows: 6, class: 'form-control tinymce',
                        spellcheck: true, aria: { required: false, labelledby: 'project-description-label' } %>
@@ -43,7 +43,7 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 
 <% if Rails.configuration.x.madmp.enable_research_domain %>
   <div class="form-group">
-    <div class="col-md-8">
+    <div class="col-lg-8">
       <%= form.label(:research_domain_id, _("Research domain"), class: "control-label") %>
 
       <% options = research_domains.map { |rd| [rd.label, rd.id] } %>
@@ -58,13 +58,13 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 <% end %>
 
 <div class="form-group"><!-- start / end dates -->
-  <div class="col-md-4">
+  <div class="col-lg-4">
     <%= form.label(:start_date, _("Project Start"), class: "control-label") %>
     <%= form.date_field :start_date, class: "form-control",
                                      data: { toggle: "tooltip" },
                                      title: _("The estimated date on which you will begin this project.") %>
   </div>
-  <div class="col-md-4">
+  <div class="col-lg-4">
     <%= form.label(:end_date, _("Project End"), class: "control-label") %>
     <%= form.date_field :end_date, class: "form-control",
                                    data: { toggle: "tooltip" },
@@ -76,10 +76,10 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 <% landing_page = plan.landing_page %>
 <% if Rails.configuration.x.doi&.active && landing_page.present? %>
   <div class="form-group"><!-- identifier -->
-    <div class="col-md-12">
+    <div class="col-lg-12">
       <%= form.label(:identifier, _('Landing page'), class: 'control-label') %>
     </div>
-    <div class="col-md-8">
+    <div class="col-lg-8">
       <% if landing_page.value.starts_with?("http") %>
         <%= link_to landing_page.value, landing_page.value %>
       <% else %>
@@ -89,10 +89,10 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
   </div>
 <% else %>
   <div class="form-group">
-    <div class="col-md-12">
+    <div class="col-lg-12">
       <%= form.label :id, _("ID"), class: "control-label" %>
     </div>
-    <div class="col-md-8">
+    <div class="col-lg-8">
       <em class="sr-only"><%= id_tooltip %></em>
       <%= form.text_field :identifier,
                           class: "form-control",
@@ -107,7 +107,7 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 <% if Rails.configuration.x.madmp.enable_ethical_issues %>
   <conditional>
     <div class="form-group">
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <div class="checkbox">
           <%= form.label(:ethical_issues, class: 'control-label', title: ethics_tooltip) do %>
             <%= form.check_box(:ethical_issues) %>
@@ -117,10 +117,10 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
       </div>
     </div>
     <div class="form-group toggleable-field">
-      <div class="col-md-12">
+      <div class="col-lg-12">
         <%= form.label(:ethical_issues_description, _('Describe any ethical concerns'), class: 'control-label', id: 'plan-ethical-description') %>
       </div>
-      <div class="col-md-8" data-toggle="tooltip" title="<%= ethics_description_tooltip %>">
+      <div class="col-lg-8" data-toggle="tooltip" title="<%= ethics_description_tooltip %>">
         <em class="sr-only"><%= ethics_description_tooltip %></em>
         <%= form.text_area :ethical_issues_description,
                            rows: 6,
@@ -130,10 +130,10 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
       </div>
     </div>
     <div class="form-group toggleable-field">
-      <div class="col-md-12">
+      <div class="col-lg-12">
         <%= form.label(:ethical_issues_report, _('Ethical protocols'), class: 'control-label') %>
       </div>
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <em class="sr-only"><%= ethics_report_tooltip %></em>
         <%= form.url_field(:ethical_issues_report,
                            class: "form-control",
@@ -147,7 +147,7 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 
 <conditional>
   <div id="funder-org-controls" class="form-group">
-    <div class="col-md-8">
+    <div class="col-lg-8">
       <%= form.fields_for :funder, Org.new do |funder_fields| %>
         <%= render partial: "shared/org_selectors/local_only",
                     locals: {
@@ -163,10 +163,10 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
   </div>
 
   <div class="form-group toggleable-field">
-    <div class="col-md-12">
+    <div class="col-lg-12">
       <%= form.label(:funding_status, _("Funding status"), class: "control-label") %>
     </div>
-    <div class="col-md-8">
+    <div class="col-lg-8">
      <% funding_statuses = Plan::FUNDING_STATUS.map { |status| [_(status[0].to_s.capitalize), _(status[0].to_s)] } %>
     <%= form.select :funding_status, options_for_select(funding_statuses, form.object.funding_status),
                             {
@@ -176,11 +176,11 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
                             { class: "form-control" } %>
     </div>
     <%= form.fields_for :grant, plan.grant do |grant_fields| %>
-      <div class="col-md-12">
+      <div class="col-lg-12">
         <%= grant_fields.label(:value, _("Grant number/url"), class: "control-label") %>
       </div>
 
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <%# If the OpenAire grant typeahead if enabled use it %>
         <% if Rails.configuration.x.open_aire.active %>
           <!-- Using the research_project.json source for typeahead -->
