added dmp-hub-ui as a git submodule and added plumbing to server React from Rails

--- a/app/views/branded/dashboards/show.html.erb
+++ b/app/views/branded/dashboards/show.html.erb
@@ -1,2 +1,2 @@
 <!-- React UI -->
-<%= content_tag(:div, "", id: "react-app", data: { controller: "react" }) %>
+<%= content_tag(:div, "", id: "root", data: { controller: "react" }) %>
